--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calliope Lyrica.</title>
+    <meta name="description" content="Clases de canto lírico personalizadas">
+    <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
+    <meta property="og:locale" content="es_AR">
+    <link rel="icon" type="image/png" href="/public/calliopeWsp.png">
   </head>
   <body>
     <div id="root"></div>
