--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
     <title>Calliope Lyrica.</title>
     <meta name="description" content="Clases de canto lírico personalizadas">
     <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
+    <meta property="og:url" content="https://calliopelyrica.com.ar/">
+    <meta property="og:image" content="https://calliopelyrica.com.ar/calliopeWsp.png">
+    <meta name="robots" content="index, follow">
     <meta property="og:locale" content="es_AR">
-    <link rel="icon" type="image/png" href="/public/calliopeWsp.png">
+    <link rel="icon" type="image/png" href="/calliopeWsp.png">
+
   </head>
   <body>
     <div id="root"></div>
