--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Calliope Lyrica.</title>
     <meta name="description" content="Clases de canto lírico personalizadas">
     <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
+    <meta name="robots" content="index, follow">
     <meta property="og:url" content="https://calliopelyrica.com.ar/">
     <meta property="og:image" content="https://calliopelyrica.com.ar/calliopeWsp.png">
-    <meta name="robots" content="index, follow">
     <meta property="og:locale" content="es_AR">
+    <link rel="canonical" href="https://calliopelyrica.com.ar/">
     <link rel="icon" type="image/png" href="/calliopeWsp.png">
 
   </head>
