--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="website">
     <title>Calliope Lyrica.</title>
-    <meta name="description" content="Clases de canto lírico personalizadas">
+    <meta name="description" content="Calliope Lyrica: clases de canto lírico personalizadas para todos los niveles. Aprendé técnica vocal, interpretación y repertorio lírico, y descubrí tu verdadera voz. ¡Inscribite hoy!">
     <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
     <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Calliope Lyrica.">
     <meta property="og:url" content="https://calliopelyrica.com.ar/">
     <meta property="og:image" content="https://calliopelyrica.com.ar/calliopeWsp.png">
     <meta property="og:locale" content="es_AR">
