--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://calliopelyrica.com.ar/calliopeWsp.png">
     <meta property="og:locale" content="es_AR">
     <link rel="canonical" href="https://calliopelyrica.com.ar/">
-    <link rel="icon" type="image/png" href="/calliopeWsp.png">
+    <link rel="icon" type="image/png" href="/C.png">
 
   </head>
   <body>
