--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Calliope Lyrica.">
     <meta property="og:url" content="https://calliopelyrica.com.ar/">
-    <meta property="og:image" content="https://calliopelyrica.com.ar/calliopeWsp.png">
+    <meta property="og:image" content="https://calliopelyrica.com.ar/C.png">
     <meta property="og:locale" content="es_AR">
     <link rel="canonical" href="https://calliopelyrica.com.ar/">
     <link rel="icon" type="image/png" href="/C.png">
