--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calliope Lyrica.</title>
-    <meta name="description" content="Calliope Lyrica: clases de canto lírico personalizadas para todos los niveles. Aprendé técnica vocal, interpretación y repertorio lírico, y descubrí tu verdadera voz. ¡Inscribite hoy!">
-    <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
-    <meta name="robots" content="index, follow">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Calliope Lyrica.">
-    <meta property="og:url" content="https://calliopelyrica.com.ar/">
-    <meta property="og:image" content="https://calliopelyrica.com.ar/C.png">
-    <meta property="og:locale" content="es_AR">
-    <link rel="canonical" href="https://calliopelyrica.com.ar/">
-    <link rel="icon" type="image/png" href="/C.png">
+<html lang="es" translate="no">
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google" content="notranslate">
+  <meta name="robots" content="notranslate">
+  <title>Calliope Lyrica.</title>
+  <meta name="description"
+    content="Calliope Lyrica: clases de canto lírico personalizadas para todos los niveles. Aprendé técnica vocal, interpretación y repertorio lírico, y descubrí tu verdadera voz. ¡Inscribite hoy!">
+  <meta name="keywords" content="canto lírico, clases de canto, técnica vocal, conciertos, formación vocal">
+  <meta name="robots" content="index, follow">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Calliope Lyrica.">
+  <meta property="og:url" content="https://calliopelyrica.com.ar/">
+  <meta property="og:image" content="https://calliopelyrica.com.ar/C.png">
+  <meta property="og:locale" content="es_AR">
+  <link rel="canonical" href="https://calliopelyrica.com.ar/">
+  <link rel="icon" type="image/png" href="/C.png">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
