--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <meta property="og:locale" content="es_AR">
   <link rel="canonical" href="https://calliopelyrica.com.ar/">
   <link rel="icon" type="image/png" href="/C.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 </head>
 
